--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -1,4 +1,21 @@
 .section-input {
+  .maxlength-test {
+    & > * {
+      vertical-align: middle;
+      height: 28px;
+      border-radius: 3px;
+    }
+    input {
+      box-shadow: none;
+      outline: 0;
+      border: 1px solid #dddddd;
+      padding: 0 10px;
+    }
+
+    button {
+      margin-left: 5px;
+    }
+  }
   .input {
     width: 100%;
     height: 100px;
@@ -12,6 +29,7 @@
 
     &.disabled {
       background-color: #f9f9f9;
+      border-color: #dddddd;
     }
     &.read-only {
       background-color: #f9f9f9;
@@ -33,6 +51,7 @@
       }
       &:read-only {
         background-color: #f9f9f9;
+        color: #bbbbbb;
       }
     }
 
