--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -30,6 +30,15 @@
       background-repeat: no-repeat;
     }
 
+    &__writer {
+      font-size: 12px;
+      color: #bbbbbb;
+
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
     span {
       display: block;
       font-size: 14px;
@@ -140,14 +149,8 @@
           }
 
           .card__writer {
-            font-size: 14px;
             padding-left: 5px;
-            border-left: 1px solid #dddddd;
-            color: #dddddd;
-
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
+            border-left: 1px solid #bbbbbb;
             width: 45%;
           }
         }
