--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -53,6 +53,7 @@
       outline: 0;
       margin-right: 10px;
       padding: 10px;
+      background-color: transparent;
       &:disabled {
         background-color: #f9f9f9;
         color: #eb5757;
